Feed select box is now visible on index page (but only if the total number of feeds exceeds the pagination limit). Adjust bottom pagination to ensure it doesn't overlap with feed images.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/reader@23309 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/module.css
+++ b/module.css
@@ -26,3 +26,8 @@
 	clear:both;
 	margin:0em 0em 1em 1em;
 }
+
+/* Ensure an element does not overlap an image */
+.reader_clear_both {
+	clear:both;
+}
